# xmonad-task

./: .gitignore  README.md  xmonad-task.cabal
XMonad/Actions/: Task.hs
XMonad/Config/: TaskActionConfig.hs  TaskConfig.hs  XmobarConfig.hs
XMonad/Hooks/: TaskActions.hs  TaskCommands.hs
XMonad/Util/: DTrace.hs  taskctl.hs
